[package]
name = "renderer"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

[[bin]]
name = "renderer-native"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive"] }
env_logger = "0.11.2"
futures = "0.3.30"
gltf = { version = "1.4.0", features = ["KHR_lights_punctual", "names"] }
image = "0.24.8"
log = "0.4.20"
petgraph = { version = "0.6.4", features = ["serde-1"] }
nalgebra-glm = { version = "0.18.0", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
rfd = "0.13.0"
serde = { version = "1.0.193", features = ["derive"] }
winit = "0.29.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
wgpu = "0.19.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.0"
console_log = "1.0.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
] }
wgpu = { version = "0.19.1", default-features = false, features = [
    "webgl",
    "wgsl",
] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
